[fix] | Responsive - background image not covering

--- a/assets/styles/config/reset.css
+++ b/assets/styles/config/reset.css
@@ -31,12 +31,15 @@ body {
     width: 100%;
     overflow-x: hidden;
 }
+#main {
+    overflow-x: hidden;
+}
 #anim-img {
     position: fixed;
     top: 0;
     left: 0;
-    width: 100vw;
-    height: 100vh;
+    width: 100%;
+    height: 100%;
     z-index: -3;
     background-color: var(--primary);
     filter: brightness(0.7) saturate(2) grayscale(0.6);
